and tools to Marpa::R3.

=head1 Changes

=head2 Multiple C<< slr->read() >> calls allowed

The C<< slr->read() >> method may now called multiple
times during a parse. each time with a new string.
These strings will be called B<input blocks>.
The <input block> read by the I<n>'th 
call of the C<< slr->read() >> method during a parse
has block index I<n>.
The
C< $slr->input_length() >> and
C< $slr->literal() >>
calls allow a new,
optional parameter: the block index.

=head2 Marpa strings must be UTF-8

Marpa expects all strings passed to it to be valid UTF-8.
(Note that all ASCII-7 string are valid UTF-8).

=head2 "Eager" lexemes added

See L<Marpa::R3::Scanless::DSL/"eager">.

=head2 Problems with kernel Earley items in progress reports fixed

Progress reports had been misreporting some
Earley items.  The misreported items
were certain kernel Earley items
instances containing one
or more proper nullables.
By kernel Earley item, I mean an Earley item
where the dot is in the middle -- not at the beginning
and and not at the end.
In other words, kernel Earley items are items which
are not predictions, and which are not
completions.

This bug is actually quite obscure --
almost all interest in progress reports is in
completed Earley items, which were not affected.
So obscure, in fact, was this bug that
it went unnoticed in use.
It surfaced only when I reread the
code and realized that some corner cases were
not being dealt with correctly.
This bugs is now fixed.

=head2 Semantics moved from recognizer to grammar

In Marpa::R2, the semantics was not finally settled
until the C<< $recce->value() >> call.
In Marpa::R3, semantics will be fully settled in the grammar.

=head2 Options moved from recognizer to grammar

The C<exhaustion>,
C<ranking_method>,
C<rejection>,
C<semantics_package>,
and C<trace_actions>
named arguments
are grammar options in Marpa::R3.
They were
recognizer name arguments in Marpa::R2,

=head2 Actions that are Perl names must resolve to subroutines
