@@ -35,11 +35,23 @@ These strings will be called B<input blocks>.
 The <input block> read by the I<n>'th 
 call of the C<< slr->read() >> method during a parse
 has block index I<n>.
+
+This change makes the previous L0 positions no
+longer adequately identify a location, 
+which necessitates many changes.
+
+New parameters:
 The
 C< $slr->input_length() >> and
 C< $slr->literal() >>
 calls allow a new,
 optional parameter: the block index.
+
+Deleted calls:
+The
+C< $slr->g1_location_to_span() >> and
+C< $slr->last_completed_span() >>
+methods has been removed.
 
 =head2 Marpa strings must be UTF-8
 
@@ -121,8 +133,6 @@ It has been removed.
 =head2 [name, values] is now the default action
 
 =head2 Unicode now works in the SLIF DSL
-
-=head2 New method g1_input_span
 
 =head2 Context::location is now Context::g1_range
 
